fix scrollbar

--- a/src/game/app/client/views/css/style.css
+++ b/src/game/app/client/views/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 body.modal-open {
-  overflow: scroll !important;
+  overflow: hidden;
 }
 
 input,
@@ -260,19 +260,6 @@ vertical-align: middle;
   height: 100%;
 }
 
-body::-webkit-scrollbar {
-  width: 0;
-  height: 0.5rem;
-}
-
-body::-webkit-scrollbar-thumb, body::-webkit-scrollbar-track  {
-  background: transparent;
-}
-
-body::-webkit-scrollbar-track:hover ~ body::-webkit-scrollbar-thumb:hover{
-  background: antiquewhite;
-}
-
 .currentLecturesHeader {
   background-color: rgba(24, 30, 32, 0.699);
   color: antiquewhite;
@@ -437,10 +424,6 @@ body::-webkit-scrollbar-track:hover ~ body::-webkit-scrollbar-thumb:hover{
   position: static !important;
 }
 
-.modal::-webkit-scrollbar {
-  display:none
-}
-
 .modal-header .dropdown-menu {
   width: 464px !important;
   min-height: 501px !important;
@@ -566,7 +549,7 @@ body::-webkit-scrollbar-track:hover ~ body::-webkit-scrollbar-thumb:hover{
 
 ::-webkit-scrollbar {
   width: 6px;
-  height: 12px;
+  height: 6px;
 }
 
 ::-webkit-scrollbar-button {
@@ -574,35 +557,17 @@ body::-webkit-scrollbar-track:hover ~ body::-webkit-scrollbar-thumb:hover{
   height: 0px;
 }
 
-::-webkit-scrollbar-thumb {
-  background: rgba(221, 221, 221, 0.3);
+::-webkit-scrollbar-thumb, ::-webkit-scrollbar-track {
+  background: transparent;
   border: 0px none #ffffff;
   border-radius: 50px;
 }
 
-::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover, ::-webkit-scrollbar-thumb:active {
   background: rgba(221, 221, 221, 0.3);
 }
 
-::-webkit-scrollbar-thumb:active {
-  background: rgba(221, 221, 221, 0.3);
-}
-
-::-webkit-scrollbar-track {
-  background: transparent;
-  border: 0px none #ffffff;
-  border-radius: 51px;
-}
-
-::-webkit-scrollbar-track:hover {
-  background: transparent;
-}
-
-::-webkit-scrollbar-track:active {
-  background: transparent;
-}
-
-::-webkit-scrollbar-corner {
+::-webkit-scrollbar-track:hover, ::-webkit-scrollbar-track:active, ::-webkit-scrollbar-corner {
   background: transparent;
 }
 
